--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/DrawerLayout"
     android:layout_width="match_parent"
@@ -9,15 +8,15 @@
 
     <!-- main content -->
     <FrameLayout
-        android:id="@+id/MasterContaienr"
+        android:id="@+id/MasterContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <fragment
+            android:name="com.example.buntafujikawa.rssreader.LinkListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.example.buntafujikawa.rssreader.LinkListFragment"
-            tools:layout="@layout/fragment_links"/>
+            tools:layout="@layout/fragment_links" />
 
     </FrameLayout>
 
@@ -30,10 +29,10 @@
         android:background="?android:attr/colorBackground">
 
         <fragment
+            android:name="com.example.buntafujikawa.rssreader.SiteListFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.example.buntafujikawa.rssreader.SiteListFragment"
-            tools:layout="@layout/fragment_sites"/>
+            tools:layout="@layout/fragment_sites" />
 
     </FrameLayout>
 
