--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:background="@android:color/white"
-                app:tabIndicatorColor="@color/colorPrimary"></android.support.design.widget.TabLayout>
+                android:background="@android:color/black"
+                app:tabIndicatorColor="@color/colorPrimary"/>
 
         </android.support.design.widget.AppBarLayout>
 
