--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#fe9901</color>
+    <color name="colorPrimaryDark">#FE5601</color>
+    <color name="colorAccent">#01A972</color>
     <color name="colorPrimaryText">#333333</color>
     <color name="colorSecondaryText">#9A9A9A</color>
     <color name="colorDivider">#9A9A9A</color>
