--- a/app/src/main/res/layout/drawer_content.xml
+++ b/app/src/main/res/layout/drawer_content.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.buntafujikawa.rssreader.MainActivity">
+    tools:context="com.sugosumadesu.buntafujikawa.rssreader.MainActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/LinkList"
