--- a/app/src/main/res/layout/fragment_sites.xml
+++ b/app/src/main/res/layout/fragment_sites.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.buntafujikawa.rssreader.MainActivity">
+    tools:context="com.sugosumadesu.buntafujikawa.rssreader.MainActivity">
 
     <ListView
         android:id="@+id/SiteList"
